--- a/dashboard-storehub.html
+++ b/dashboard-storehub.html
@@ -73,7 +73,7 @@
                                     <span>Products</span>
                                 </a>
                             </li>
-                            <li class="dasboard-store-hub  active relative group flex items-center justify-between flex-wrap">
+                            <li class="dasboard-store-hub  active relative group flex items-center justify-between flex-wrap opend">
                                 <a href="javascript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
