my wallet page transiction done and retailer list

--- a/buyer-home.html
+++ b/buyer-home.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="btn-part text-end">
                         <span class="arrow_part slick_custom_arrows flex mb-[10px] gap-[24px] cursor-pointer *:hover:text-[#1F3650]"></span>
-                        <a href="javascript:void(0)" class="text-[1.25rem] text-color4 leading-[1.1] font-[600]">View All</a>
+                        <a href="./retailers-list.html" class="text-[1.25rem] text-color4 leading-[1.1] font-[600]">View All</a>
                     </div>
                 </div>
                 <div class="slider-part mt-[60px]">
