--- a/recomender-transiction-history.html
+++ b/recomender-transiction-history.html
@@ -159,33 +159,35 @@
                     </div>
                     <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[30px] flex justify-between"><span>My Wallet</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
                     <div class="statement_period_wraper">
-                        <div class="header px-[30px] py-[15px] bg-[#F5F5F5]">
+                        <div class="header px-[30px] py-[15px] bg-[#F5F5F5] cursor-pointer">
                             <h3 class="font-semibold text-[0.95rem] text-[#1F3650] leading-[1.4] tracking-[-0.2px] flex justify-between gap-4"><span>Statement Period</span> <span><i class="fas fa-angle-down"></i></span></h3>
                             <div class="date_wraper text-[#50555C]">
                                 01 Sep 2024 - 12 Sep 2024
                             </div>
                         </div>
-                        <div class="period-history-wraper pt-[24px] p-[30px] flex flex-col gap-[23px]">
-                            <div class="period-history has-[+_.period-history]:border-b has-[+_.period-history]:border-b-[#E6E6E4] has-[+_.period-history]:pb-[22px]">
-                                <div class="date text-[#4B4B51] mb-[20px]">12 Sep 2024</div>
-                                <div class="details flex justify-between">
-                                    <div class="time">09:00</div>
-                                    <div class="withdrawl">
-                                        <h4 class="font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">Withdrawal</h4>
-                                        <div class="ren_no text-[#50555C]">Ref no: 123 4567 89</div>
+                        <div class="period-history-wraper pt-[24px] p-[30px]" style="display: block;">
+                            <div class="flex flex-col gap-[23px]">
+                                <div class="period-history has-[+_.period-history]:border-b has-[+_.period-history]:border-b-[#E6E6E4] has-[+_.period-history]:pb-[22px]">
+                                    <div class="date text-[#4B4B51] mb-[20px]">12 Sep 2024</div>
+                                    <div class="details flex justify-between">
+                                        <div class="time flex-[1_1_100px] max-w-[172px]">09:00</div>
+                                        <div class="withdrawl flex-[1_1_200px]">
+                                            <h4 class="font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">Withdrawal</h4>
+                                            <div class="ren_no text-[#50555C]">Ref no: 123 4567 89</div>
+                                        </div>
+                                        <div class="withdral-ammount font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px] flex-[1_1_100px] max-w-[150px]">-£30.00 </div>
                                     </div>
-                                    <div class="withdral-ammount font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">-£30.00 </div>
                                 </div>
-                            </div>
-                            <div class="period-history has-[+_.period-history]:border-b has-[+_.period-history]:border-b-[#E6E6E4] has-[+_.period-history]:pb-[22px]">
-                                <div class="date text-[#4B4B51] mb-[20px]">20 Sep 2024</div>
-                                <div class="details flex justify-between">
-                                    <div class="time">09:00</div>
-                                    <div class="withdrawl">
-                                        <h4 class="font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">Withdrawal</h4>
-                                        <div class="ren_no text-[#50555C]">Ref no: 123 4567 89</div>
+                                <div class="period-history has-[+_.period-history]:border-b has-[+_.period-history]:border-b-[#E6E6E4] has-[+_.period-history]:pb-[22px]">
+                                    <div class="date text-[#4B4B51] mb-[20px]">20 Sep 2024</div>
+                                    <div class="details flex justify-between">
+                                        <div class="time flex-[1_1_100px] max-w-[172px]">09:00</div>
+                                        <div class="withdrawl flex-[1_1_200px]">
+                                            <h4 class="font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">Withdrawal</h4>
+                                            <div class="ren_no text-[#50555C]">Ref no: 123 4567 89</div>
+                                        </div>
+                                        <div class="withdral-ammount font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px] flex-[1_1_100px] max-w-[150px]">-£30.00 </div>
                                     </div>
-                                    <div class="withdral-ammount font-semibold text-[0.95rem] text-[#272833] leading-[1.4] tracking-[-0.2px]">-£30.00 </div>
                                 </div>
                             </div>
                         </div>
@@ -265,47 +267,6 @@
             </div>
         </div>
     </footer>
-    <div id="withdraw_funds" class="hidden modal-overlay fixed inset-0 bg-[#00020b66] z-[10]">
-        <div class="flex min-h-full items-center justify-center">
-            <div class=" modal-content bg-[#fff] px-[36px] py-[22px] rounded-[10px] mobilexl:min-w-[400px] max-w-[545px] max-h-[500px] overflow-y-auto scrollbar-none">
-                <div class="modal_body">
-                    <div class="header_text flex justify-between items-center">
-                        <h3 class="font-[400] text-[#1A202C] text-[1.5rem] leading-[1.3] dm-serif">Withdraw Funds</h3>
-                        <div class="close_modal_btn">
-                            <a href="javascript:void(0)" class="close-modal cursor-pointer text-[1.25rem]"><i class="fa-solid fa-xmark"></i></a>
-                        </div>
-                    </div>
-                    <div class="withdraw-amount mt-[44px]">
-                        <form action="#" class="flex flex-col gap-[8px]">
-                            <label for="urc_code" class="inline-block font-semibold text-[#1E293B] text-[1rem]">Amount you would like to withdraw</label>
-                            <div class="relative">
-                                <input type="text" class="address_line bg-[transparent] border-[1px] border-[#CCCBC8] w-full p-[11px] rounded-[5px] tracking-[1px] text-[1rem] text-[#020306] placeholder:text-color11" placeholder="£ 30.00">
-                            </div>
-                        </form>
-                        <button class="confirmation-btn close_modal_btn modal_btn bg-color4 px-[24px] py-[12px] uppercase text-[#000000] text-[0.875rem] tracking-[1.5px] mt-[42px] w-full text-center" data-target="confirm_message">Confirm</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="confirm_message" class="hidden modal-overlay fixed inset-0 bg-[#00020b66] z-[10]">
-        <div class="flex min-h-full items-center justify-center">
-            <div class=" modal-content bg-[#fff] px-[36px] py-[22px] rounded-[10px] mobilexl:min-w-[400px] max-w-[545px] max-h-[500px] overflow-y-auto scrollbar-none">
-                <div class="modal_body">
-                    <div class="success_message_wraper text-center">
-                        <div class="h-[100px] w-[100px] flex justify-center items-center text-white text-[1.5rem] bg-[#caa25c] rounded-full mx-auto border-[10px] border-[#F6EEE0] shadow-[0_0_0_10px_#FAF6EF]">
-                            <i class="fas fa-check"></i>
-                        </div>
-                        <h4 class="title dm-serif text-[1.875rem] text-[#272833] leading-[1] mt-[30px]">Succcess!</h4>
-                        <p class="tracking-[-0.2px] text-[#686970] my-[20px]">Your £30.00 has been withdrawn and will be processed shortly.</p>
-                        <div class="btn-wrpaer">
-                            <button class="close_modal_btn font-semibold text-[#020306] text-center p-[10px] rounded-[10px] bg-[#F6F6F7] w-full">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script src="./assets/js/plugin.js"></script>
     <script src="./assets/js/main.js"></script>
     <script>
@@ -322,30 +283,12 @@
                 $('.buyer_profile_menu').toggleClass('left-[-100%] left-0');              
             });
         })
-        //modal on and close
-        $(document).ready(function () {
-            let modal_btn = document.querySelectorAll('.modal_btn');
-
-            modal_btn.forEach(e => {
-                let modal_name = '#' + e.dataset.target;
-                let modal = $(modal_name);
-                let close_icon = $(modal_name + ' .close_modal_btn');
-
-                e.addEventListener('click', function () {
-                    console.log(modal_name);
-                    modal.show();
-                });
-                modal.on('click', function (event) {
-                    if (!$(event.target).closest('.modal-content').length) {
-                        modal.hide();
-                    }
-                });
-                close_icon.on('click', function () {
-                    modal.hide();
-                });
-            });
-        });
-
+        // statement period on off
+        $('.statement_period_wraper .header').on('click',function(){
+            let period_item = $(this).next('.period-history-wraper'); 
+            $(period_item).slideToggle(300);
+        })
+        
     </script>
 </body>
 </html>
