retailers list done

--- a/retailers-list.html
+++ b/retailers-list.html
@@ -319,6 +319,29 @@
                     </div>
                 </div>
             </div>
+            <div class="bottom-part flex gap-[20px] items-center mobile:justify-between justify-center py-[20px] px-[24px] flex-wrap mt-[30px]">
+                <div class="show-result flex items-center gap-[10px]">
+                    <span class="text-[#5D6A83]">Show result:</span>
+                    <div class="relative after:z-[1] show-result-select after:absolute after:top-1/2 after:right-[12px] after:-translate-y-1/2 after:text-[#5D6A83] after:content-['\f107'] after:font-fontawsome after:font-[900]">
+                        <select class="appearance-none py-[8px] px-[12px] w-[68px] border-[1px] border-[#85A1C2] rounded-[6px] font-[600] leading-[1.5] relative z-[2] bg-transparent">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="pagignation flex items-center *:font-[600] *:text-[14px]">
+                    <div class="left-icon"><a href="javascript:void(0)" class="text-[#96A3BE] px-[10px]"><i class="fa-solid fa-chevron-left"></i></a></div>
+                    <div class="flex items-center *:h-[40px] *:w-[40px] *:rounded-[6px] *:flex *:items-center *:justify-center *:text-[#96A3BE]">
+                        <a href="javscript:void(0)" class="">1</a>
+                        <a href="javscript:void(0)" class="bg-[#85A1C2] text-[#2F4A69!important]">2</a>
+                        <a href="javscript:void(0)" class="">3</a>
+                        <a href="javscript:void(0)" class="">4</a>
+                    </div>
+                    <div class="right-icon"><a href="javascript:void(0)" class="text-[#96A3BE] px-[10px]"><i class="fa-solid fa-chevron-right"></i></a></div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="bg-[#EBEAE6]">
